Added bootstrap, and initial table layout for person list

--- a/TechTest/TechTest/Views/Home/Index.cshtml
+++ b/TechTest/TechTest/Views/Home/Index.cshtml
@@ -4,3 +4,24 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<div class="table-responsive">
+    <table class="table" id="people">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Authorised</th>
+                <th>Enabled</th>
+                <th>Colours</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><a id="1" href="#">Bo Bob</a></td>
+                <td><span class="yes">Yes</span></td>
+                <td><span class="no">No</span></td>
+                <td>Red</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
