--- a/TechTest/TechTest/Views/Shared/_Layout.cshtml
+++ b/TechTest/TechTest/Views/Shared/_Layout.cshtml
@@ -4,10 +4,21 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
+
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/Content/TechTest.css" rel="stylesheet" />
+    @RenderSection("Head", false)
 </head>
 <body>
-    <div>
-        @RenderBody()
+    <div class="container-fluid" id="container">
+        <h1>@ViewBag.Title</h1>
+         @RenderBody()
     </div>
+
+    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/Scripts/knockout-3.2.0.js"></script>
+    @RenderSection("Scripts", false)
+
 </body>
 </html>
