Removed circular navigation property on Colour class, disabled model proxy generation, Added include to fetch colours, Changed default sorting, Added KO viewmodel for personlist table

--- a/TechTest/TechTest/Content/TechTest.css
+++ b/TechTest/TechTest/Content/TechTest.css
@@ -1,7 +1,9 @@
-﻿#people .no {
+﻿#people .no:after {
+    content: "No";
     color: red;
 }
 
-#people .yes {
+#people .yes:after {
+    content: "Yes";
     color: green;
 }
