--- a/TechTest/TechTest/Views/Shared/_Layout.cshtml
+++ b/TechTest/TechTest/Views/Shared/_Layout.cshtml
@@ -12,7 +12,9 @@
 <body>
     <div class="container-fluid" id="container">
         <h1>@ViewBag.Title</h1>
-         @RenderBody()
+        <div id="wrapper">
+            @RenderBody()
+        </div>
     </div>
 
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
