--- a/TechTest/TechTest/Content/TechTest.css
+++ b/TechTest/TechTest/Content/TechTest.css
@@ -7,3 +7,8 @@
     content: "Yes";
     color: green;
 }
+
+.checkbox input[type=checkbox], .checkbox-inline input[type=checkbox] {
+    position: relative;
+    margin-left: 10px;
+}
